moved into style folder and fixed scrollbar error

--- a/tabs/src/index.css
+++ b/tabs/src/index.css
@@ -1,9 +1,10 @@
-@import url("components/TabConfig.css");
-@import url("components/sample/ConnectedResources.css");
-@import url("components/sample/Publish.css");
-@import url("components/sample/QueryRunner.css");
-@import url("components/sample/Welcome.css");
-@import url("components/sample/MainContent.css");
+@import url("components/sample/style/TabConfig.css");
+@import url("components/sample/style/ConnectedResources.css");
+@import url("components/sample/style/MainContent.css");
+@import url("components/sample/style/Publish.css");
+@import url("components/sample/style/TableOfContents.css");
+@import url("components/sample/style/QueryRunner.css");
+@import url("components/sample/style/Welcome.css");
 * {
   box-sizing: border-box;
   margin: 0px;
@@ -14,7 +15,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eeeeee;
 }
 
 .center {
@@ -24,4 +24,14 @@ body {
   background-color: #fff;
   overflow: hidden;
   position: relative;
+}
+
+main {
+  width: 75vw;
+  padding: 2%;
+}
+
+.pad-vertical {
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
